--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Chat với AI, nhận gợi ý công việc part‑time phù hợp theo lịch rảnh. Ứng tuyển nhanh và linh hoạt cùng Workverse." />
     <meta property="og:image" content="/image/WorkVerseLogoCycle 1.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://workverse-sage.vercel.app" />
 
     <!-- JSON-LD Organization for SEO -->
     <script type="application/ld+json">
@@ -21,8 +21,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Workverse",
-      "url": "https://yourdomain.com",
-      "logo": "https://yourdomain.com/image/WorkVerseLogoCycle 1.png",
+      "url": "https://workverse-sage.vercel.app",
+      "logo": "https://workverse-sage.vercel.app/image/WorkVerseLogoCycle 1.png",
       "sameAs": [
         "https://www.facebook.com/profile.php?id=61567714224653",
         "https://www.instagram.com/work.verse/",
